# vip

./: Cargo.toml  mentorat1  selecteur.kra  selecteur.kra~  selecteur.png~  selecteur2.kra  selecteur_avec_coins.kra  selecteur_avec_coins.kra~
src/: bitmap2d.rs  canvas.rs  main.rs  maths.rs  normal.vert  selection.frag  selection.rs  selection.vert  text.frag  text.rs  ui.rs
src/canvas/: mod.rs  normal.frag  normal.vert  shader.rs
src/keyboard/: azerty.rs  mod.rs
src/text/: mod.rs  shader.rs  text.frag  text.vert
src/ui/: mod.rs  uistate.rs  vimui.rs
src/ui/background/: background.frag  background.vert  mod.rs
src/ui/selection/: mod.rs  selection.frag  selection.vert
