[package]
name = "pixy"
version = "0.1.0"
authors = ["iona <arthur.blanleuil@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = '*'
image = '*'
glfw = '*'
#specs = '*'
luminance = '*'
luminance-glfw = '*'
luminance-derive = '*'
rusttype = '*'

serde = { version = '*', features = ['derive'] }
serde_json = '*'
